...
                value={value}
                onChangeText={onChange}
                className={`p-2 border-[#a7a7a7] rounded-lg text-xl ${darkMode ? 'text-white' : 'text-black'} ${darkMode ? 'bg-[#1b1b1b]' : 'bg-white'} h-[50px] w-[300px]`}
                returnKeyType="next"
                autoCapitalize="none"
                style={{ fontFamily: mediumFont }}
                testID="job-title-input"
                onSubmitEditing={() => descriptionInputRef.current.focus()}
              />
            )}
            name="title"
          />
          {errors.title && <Text className="text-red-700" style={{ fontFamily: mediumFont }}>{errors.title.message}</Text>}
...
          <Label
            className={`${darkMode ? "text-gray-300" : "text-gray-700"} text-lg mb-1`}
            style={{ fontFamily: mediumFont }}
          >
            Status<Text className="text-red-500">*</Text>
          </Label>
          <Select testID="status-select" onValueChange={(data) => data ? setSelectedStatus(data.value) : Status.APPLIED} required>
            <SelectTrigger className="w-[210px] bg-white p-2 border-[#a7a7a7] rounded-lg">
              <SelectValue placeholder="Select" className="m-1 text-lg" />
            </SelectTrigger>
            <SelectContent className="w-[210px] bg-white">
              <SelectGroup>
                {Object.values(Status).map((s) => {
...
          <Label
            className={`${darkMode ? "text-gray-300" : "text-gray-700"} text-lg mb-1`}
            style={{ fontFamily: mediumFont }}
          >
            Submission date<Text className="text-red-500">*</Text>
          </Label>
          <Button testID="date-trigger-button" onPress={() => datePicker.current?.showPicker()}
            className={`h-[52px] w-[150px] rounded-lg border items-center justify-center ${darkMode
              ? "bg-[#2a2a2a] border-[#3a3a3a]"
              : "bg-[#f2f2f2] border-[#dcdcdc]"}`}>
            <Text className={`${darkMode ? 'text-white' : 'text-black'}`}>
              {`${selectedDate ? selectedDate.toLocaleDateString() : 'Select date'}`}
            </Text>
...
                value={value}
                onChangeText={onChange}
                className={`p-2 border-[#a7a7a7] rounded-lg text-xl ${darkMode ? 'text-white' : 'text-black'} ${darkMode ? 'bg-[#1b1b1b]' : 'bg-white'} h-[50px] w-[300px]`}
                returnKeyType="next"
                autoCapitalize="none"
                style={{ fontFamily: mediumFont }}
                testID="location-input"
                ref={locationInputRef}
                onSubmitEditing={() => notesInputRef.current.focus()}
              />
            )}
            name="location"
          />
...
                value={value}
                onChangeText={onChange}
                className={`p-2 border-[#a7a7a7] rounded-lg text-xl ${darkMode ? 'text-white' : 'text-black'} ${darkMode ? 'bg-[#1b1b1b]' : 'bg-white'} h-[50px] w-[300px]`}
                returnKeyType="next"
                autoCapitalize="none"
                style={{ fontFamily: mediumFont }}
                testID="found-where-input"
                ref={foundWhereInputRef}
              />
            )}
            name="foundWhere"
          />
          {errors.foundWhere && <Text className="text-red-700" style={{ fontFamily: mediumFont }}>{errors.foundWhere.message}</Text>}
...

          <Button className='justify-end' onPress={handleSubmit(addEntry)}>
            <Text
              className={`${darkMode ? 'bg-white' : 'bg-black'} ${darkMode ? 'text-black' : 'text-white'} p-5 rounded-md text-xl`}
              style={{ fontFamily: mediumFont }}
            >
              Add
            </Text>
          </Button>
        </ScrollView>
      </SafeAreaView>
    </>
  )
...
