...
            style=
            {[styles.dialog, { paddingBottom: insets.bottom || 16, backgroundColor: `${darkMode ? '#1b1b1b' : 'white'}` }]}>
            <Text style={[styles.title, { color: `${darkMode ? 'white' : 'black'}` }]}>{title}</Text>
            <Text style={[styles.message, { color: `${darkMode ? 'white' : 'black'}` }]}>{body}</Text>
            <View style={styles.actions}>
              <TouchableOpacity onPress={close} style={styles.button}>
                <Text style={[styles.buttonText, { color: `${darkMode ? 'white' : 'black'}` }]}>OK</Text>
              </TouchableOpacity>
            </View>
          </View>
        </View>
      </SafeAreaView>
    </Modal>
...
