...
    .matches(/^\d+$/, { message: "Code must only contain digits", excludeEmptyString: true })
    .required("Please enter code")
    .length(6, "Code must be 6 digits"),
  newPassword: string()
    .required("Password is required")
    .min(12, "Password too short")
    .matches(/\d/g, { message: "Missing at least one digit", excludeEmptyString: true })
    .matches(/[a-z]/g, { message: "Missing lowercase character", excludeEmptyString: true })
    .matches(/[A-Z]/g, { message: "Missing uppercase character", excludeEmptyString: true })
    .matches(/[!@#\$%&\*\(\)\-_+\=\[\]\{\};:'"\\|,<>\.\/\?`~]/g, { message: "Missing special character", excludeEmptyString: true })
    .max(256, "Password maximum length exceeded"),
});

...
