url: http://localhost:8081
---
- assertVisible: +
- tapOn: +
- tapOn:
    id: job-title-input
- inputText: Junior Software Engineer
- pressKey: Enter
- inputText: Random job desc
- pressKey: Enter
- inputText: Samsung
- pressKey: Enter
- inputText: careers@samsung.com
- tapOn:
    id: status-select
- tapOn:
    id: date-trigger-button
- tapOn:
    point: 31%,53%
- tapOn:
    id: location-input
- inputText: London, UK
- pressKey: Enter
- inputText: London is expensive compared to Manchester.
- tapOn:
    id: found-where-input
- inputText: LinkedIn
- assertVisible: "Selected images: 2"
- tapOn: Add
- runFlow: delete_entry.yaml