appId: com.ahmed_m.hunter
name: Sign in screen
---
- tapOn:
    id: email-input-field
- inputText: ${email}
- pressKey: Enter
- inputText: ${password}
- tapOn:
    id: "signin-btn"
- assertVisible:
    text: "Success"
- assertVisible:
    text: "You have signed in"
- tapOn: OK
- runFlow: add_entry.yaml
