url: http://localhost:8081
---
- launchApp
- tapOn: Sign in with email
- tapOn:
    id: "email-input-field"
- inputText: maestro.testuser
- tapOn:
    id: "password-input-field"
- inputText: frejknjkFREF
- tapOn:
    id: "signin-btn"
- assertVisible: "Invalid email format"
- assertVisible: "Missing at least one digit"
