appId: com.ahmed_m.hunter
name: Sign up screen
---
- tapOn: Don't have an account? Click here
- tapOn:
    id: email-input-field
- inputText: ${email}
- pressKey: Enter
- inputText: ${password}
- pressKey: Enter
- inputText: ${password}
- tapOn:
    id: "signup-btn"
- assertVisible:
    text: "Success"
- assertVisible:
    text: "Account created. Check your email to verify your account."
- tapOn: OK
- runFlow: signin.yml
