appId: com.ahmed_m.hunter
---
- launchApp
- tapOn: Don't have an account? Click here
- inputText: maestro.testuser
- pressKey: Enter
- inputText: frejknjkFREF
- pressKey: Enter
- inputText: abc321
- tapOn:
    id: "signup-btn"
- assertVisible: "Invalid email format"
- assertVisible: "Missing at least one digit"
- assertVisible: "Passwords don't match"
